# Exlex-Benchmark

./: Benchmarks.html  Cargo.toml  README.md  generate_dashboard.py  generate_full_dashboard.py  memtest.sh  run_benchmark.sh  stabilize.sh
benches/: 1_bench_parse.rs  2_bench_lookup_flat.rs  3_bench_lookup_nested.rs  4_bench_iteration.rs  5_bench_mutate.rs  6_bench_roundtrip.rs  7_bench_asymptotic.rs  8_bench_cold_start.rs  9_bench_mixed_workload.rs
benches/common/: collision_util.rs  loader.rs  mod.rs
fixtures/: bushy_normal_middle.ini  bushy_normal_sequential.exlex  deep_dense_pathdeep.exlex  deep_dense_pathdeep.ini  deep_dense_pathdeep.json  deep_dense_pathdeep.toml  deep_dense_pathdeep.xml  deep_sparse_path6.ini  flat_dense_collision.json  flat_dense_collision.xml  flat_dense_missing.toml  flat_sparse_first.exlex  flat_sparse_first.toml  flat_sparse_first.xml  lopsided_dense_last.toml  lopsided_dense_missing.exlex  lopsided_dense_missing.ini  lopsided_dense_missing.xml  mut_add_nested_section.exlex  mut_add_nested_section.json  mut_add_nested_section.toml  mut_add_nested_section.xml  mut_add_section.toml  mut_delete_then_access.ini  mut_delete_then_access.json  mut_mass_update_save.json  mut_move_section.json  mut_roundtrip_verify.xml  mut_update_twice.exlex  mut_update_twice.ini  scale_005.exlex  scale_005.ini  scale_005.json  scale_005.toml  scale_005.xml  scale_010.exlex  scale_010.ini  scale_010.json  scale_010.toml  scale_010.xml  (+95 more)
src/: lib.rs
tests/: proptest_fuzz.rs
